--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <meta name="description" content="Full Stack Developer" />
+        <meta name="description" content="Web Developer" />
         <meta name="author" content="Bilal Khalid" />
         <meta property="og:type" content="profile" />
 
@@ -34,7 +34,7 @@
         <div class="wrapper">
             <div class="content">
                 <h1>BILAL KHALID</h1>
-                <h2>full stack developer</h2>
+                <h2>web developer</h2>
             </div>
         </div>
     </body>
