--- a/index.html
+++ b/index.html
@@ -1,41 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <meta name="description" content="Web Developer" />
-        <meta name="author" content="Bilal Khalid" />
-        <meta property="og:type" content="profile" />
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Full Stack Developer" />
+    <meta name="author" content="Bilal Khalid" />
+    <meta property="og:type" content="profile" />
 
-        <style>
-            body {
-                margin: 0;
-            }
-            .wrapper {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-                height: 100vh;
-            }
-            .content {
-                font-family: "Lucida Console", Monaco, monospace;
-                padding: 0.5rem;
-                border-bottom: 1px solid #f9f2d6;
-            }
-            h2 {
-                font-weight: normal;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="wrapper">
-            <div class="content">
-                <h1>BILAL KHALID</h1>
-                <h2>web developer</h2>
+    <title>Bilal Khalid - Full Stack Developer</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts -->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
+
+    <!-- Custom styles -->
+    <link href="css/style.min.css" rel="stylesheet">
+</head>
+
+<body id="page-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">BK.</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                    data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </body>
+    </nav>
+
+    <!-- Header -->
+    <header id="home" class="masthead">
+        <div class="container d-flex h-100 align-items-center">
+            <div class="row">
+                <div class="col-12 col-lg-10 col-xl-8 mx-auto text-center">
+                    <h1 class="text-black mx-auto mt-0 mb-5">Hi, I'm Bilal Khalid.</h1>
+                    <p class="text-dark mx-auto mt-0 mb-5">A Full Stack Developer, with more than eight years of professional experience, passionate about technology and motivated to constantly learn new things.</p>
+                    <a href="#projects" class="btn btn-primary btn-lg js-scroll-trigger mb-2 mb-sm-0">View Projects</a>
+                    <a href="#contact" class="btn btn-secondary btn-lg js-scroll-trigger mb-2 mb-sm-0">Contact Me</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    
+
+    <!-- Projects Section -->
+    <section id="projects" class="projects-section">
+        <div class="container">
+
+            <h2 class="text-center mb-5">Here are some of the projects I've made.</h2>
+
+            <!-- Project One Row -->
+            <div class="row justify-content-center no-gutters bg-gray rounded mb-4 mb-lg-5">
+                <div class="col-lg-6 order-0">
+                    <div class="project-image p-3 p-md-4">
+                        <div class="project-image-inner">
+                            <img class="img-fluid" src="img/project-job-board.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-1">
+                    <div class="project-detail text-center h-100">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-left p-3 p-md-4">
+                                <h4>Job Board</h4>
+                                <p class="text-dark">A job board where users can browse and search for jobs, and employers can submit their job listings.</p>
+                                <p>
+                                    <a class="btn btn-secondary btn-sm mb-2 mb-sm-0" 
+                                        href="https://github.com/bilal-khalid/CakePHP-JobBoard" 
+                                        target="_blank">Source Code</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project Two Row -->
+            <div class="row justify-content-center no-gutters bg-gray rounded mb-4 mb-lg-5">
+                <div class="col-lg-6 order-1 order-lg-0">
+                    <div class="project-detail text-center h-100">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-left p-3 p-md-4">
+                                <h4>Game Shop</h4>
+                                <p class="text-dark">A shopping cart application with user authentication, product categories, and showcasing the most popular products depending on the number of orders.</p>
+                                <p>
+                                    <a class="btn btn-secondary btn-sm mb-2 mb-sm-0" 
+                                        href="https://github.com/bilal-khalid/CodeIgniter-GameShop" 
+                                        target="_blank">Source Code</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-0 order-lg-1">
+                    <div class="project-image p-3 p-md-4">
+                        <div class="project-image-inner">
+                            <img class="img-fluid" src="img/project-game-shop.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project Three Row -->
+            <div class="row justify-content-center no-gutters bg-gray rounded mb-4 mb-lg-5">
+                <div class="col-lg-6 order-0">
+                    <div class="project-image p-3 p-md-4">
+                        <div class="project-image-inner">
+                            <img class="img-fluid" src="img/project-simple-cms.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-1">
+                    <div class="project-detail text-center h-100">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-left p-3 p-md-4">
+                                <h4>Simple CMS</h4>
+                                <p class="text-dark">A simple CMS with categories, articles and users management functionality.</p>
+                                <p>
+                                    <a class="btn btn-secondary btn-sm mb-2 mb-sm-0" 
+                                        href="https://github.com/bilal-khalid/CodeIgniter-SimpleCMS" 
+                                        target="_blank">Source Code</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project Four Row -->
+            <div class="row justify-content-center no-gutters bg-gray rounded mb-5">
+                <div class="col-lg-6 order-1 order-lg-0">
+                    <div class="project-detail text-center h-100">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-left p-3 p-md-4">
+                                <h4>Patient Manager</h4>
+                                <p class="text-dark">Store patient records, doctors, appointments and invoices for a clinic or hospital.</p>
+                                <p>
+                                    <a class="btn btn-secondary btn-sm mb-2 mb-sm-0" 
+                                        href="https://github.com/bilal-khalid/CakePHP-PatientManager" 
+                                        target="_blank">Source Code</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-0 order-lg-1">
+                    <div class="project-image p-3 p-md-4">
+                        <div class="project-image-inner">
+                            <img class="img-fluid" src="img/project-patient-manager.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 col-lg-8 mx-auto text-center">
+
+                    <h2 class="mb-3">I'd love to hear from you</h2>
+
+                    <p class="text-dark mb-5">Please fill out the form and I'll be in touch as soon as possible.</p>
+
+                    <form id="contactform" class="form" method="POST" action="https://contact.bilalkhalid.info/contact.php">
+                        <div class="form-group">
+                            <input type="text" class="form-control mb-3 mb-sm-0" name="name" id="name" 
+                                placeholder="Enter name...">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control mb-3 mb-sm-0" name="email" id="email"
+                                placeholder="Enter email address...">
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" name="message" id="message" rows="4"
+                                placeholder="Enter message..."></textarea>
+                        </div>
+                        <div id="response" class="alert" style="display: none;"><p class="m-0"></p></div>
+                        <button type="submit" class="btn btn-primary btn-lg mx-auto">Send Message</button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Plugins -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="vendor/jquery-validation/jquery.validate.min.js"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="js/script.min.js"></script>
+
+</body>
+
 </html>
