--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-6 order-0">
                     <div class="project-image p-3 p-md-4">
                         <div class="project-image-inner">
-                            <img class="img-fluid" src="img/project-job-board.png" alt="">
+                            <img class="img-fluid" src="img/project-laravel-forum-2-700x500.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -86,9 +86,17 @@
                     <div class="project-detail text-center h-100">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left p-3 p-md-4">
-                                <h4>Job Board</h4>
-                                <p class="text-dark">A job board where users can browse and search for jobs, and employers can submit their job listings.</p>
+                                <h4>Discussion Forum</h4>
+                                <p class="text-dark">A forum application where users can have discussions about a specific topic, post and respond to messages. A forum creates a sense of community, and it can be used for general discussions around a shared interest or even for questions and answers.</p>
+                                <p>Built with:
+                                    <strong>Laravel</strong>,
+                                    <strong>Vue.js</strong>,
+                                    <strong>Bootstrap Sass</strong>
+                                </p>
                                 <p>
+                                    <a class="btn btn-primary btn-sm mb-2 mb-sm-0"
+                                        href="https://bilalkhalid.com/projects/jobboard"
+                                        target="_blank">View Demo</a>
                                     <a class="btn btn-secondary btn-sm mb-2 mb-sm-0" 
                                         href="https://github.com/bk987/CakePHP-JobBoard" 
                                         target="_blank">Source Code</a>
@@ -105,11 +113,19 @@
                     <div class="project-detail text-center h-100">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left p-3 p-md-4">
-                                <h4>Game Shop</h4>
-                                <p class="text-dark">A shopping cart application with user authentication, product categories, and showcasing the most popular products depending on the number of orders.</p>
+                                <h4>Job Board</h4>
+                                <p class="text-dark">A job board where users can browse and search for jobs, and employers can submit their job listings.</p>
+                                <p>Built with:
+                                    <strong>CakePHP</strong>,
+                                    <strong>Bootstrap</strong>,
+                                    <strong>jQuery</strong>
+                                </p>
                                 <p>
+                                    <a class="btn btn-primary btn-sm mb-2 mb-sm-0"
+                                        href="https://bilalkhalid.com/projects/jobboard"
+                                        target="_blank">View Demo</a>
                                     <a class="btn btn-secondary btn-sm mb-2 mb-sm-0" 
-                                        href="https://github.com/bk987/CodeIgniter-GameShop" 
+                                        href="https://github.com/bk987/CakePHP-JobBoard" 
                                         target="_blank">Source Code</a>
                                 </p>
                             </div>
@@ -119,7 +135,7 @@
                 <div class="col-lg-6 order-0 order-lg-1">
                     <div class="project-image p-3 p-md-4">
                         <div class="project-image-inner">
-                            <img class="img-fluid" src="img/project-game-shop.png" alt="">
+                            <img class="img-fluid" src="img/project-job-board.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -130,7 +146,7 @@
                 <div class="col-lg-6 order-0">
                     <div class="project-image p-3 p-md-4">
                         <div class="project-image-inner">
-                            <img class="img-fluid" src="img/project-simple-cms.png" alt="">
+                            <img class="img-fluid" src="img/project-game-shop.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -138,11 +154,16 @@
                     <div class="project-detail text-center h-100">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left p-3 p-md-4">
-                                <h4>Simple CMS</h4>
-                                <p class="text-dark">A simple CMS with categories, articles and users management functionality.</p>
+                                <h4>Game Shop</h4>
+                                <p class="text-dark">A shopping cart application with user authentication, product categories, and showcasing the most popular products depending on the number of orders received.</p>
+                                <p>Built with:
+                                    <strong>CodeIgniter</strong>,
+                                    <strong>Bootstrap</strong>,
+                                    <strong>jQuery</strong>
+                                </p>
                                 <p>
                                     <a class="btn btn-secondary btn-sm mb-2 mb-sm-0" 
-                                        href="https://github.com/bk987/CodeIgniter-SimpleCMS" 
+                                        href="https://github.com/bk987/CodeIgniter-GameShop" 
                                         target="_blank">Source Code</a>
                                 </p>
                             </div>
@@ -157,11 +178,19 @@
                     <div class="project-detail text-center h-100">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left p-3 p-md-4">
-                                <h4>Patient Manager</h4>
-                                <p class="text-dark">Store patient records, doctors, appointments and invoices for a clinic or hospital.</p>
+                                <h4>Simple CMS</h4>
+                                <p class="text-dark">A simple CMS with categories, articles and users management functionality.</p>
+                                <p>Built with:
+                                    <strong>CodeIgniter</strong>,
+                                    <strong>Bootstrap</strong>,
+                                    <strong>jQuery</strong>
+                                </p>
                                 <p>
+                                    <a class="btn btn-primary btn-sm mb-2 mb-sm-0"
+                                        href="https://bilalkhalid.com/projects/simplecms"
+                                        target="_blank">View Demo</a>
                                     <a class="btn btn-secondary btn-sm mb-2 mb-sm-0" 
-                                        href="https://github.com/bk987/CakePHP-PatientManager" 
+                                        href="https://github.com/bk987/CodeIgniter-SimpleCMS" 
                                         target="_blank">Source Code</a>
                                 </p>
                             </div>
@@ -171,7 +200,7 @@
                 <div class="col-lg-6 order-0 order-lg-1">
                     <div class="project-image p-3 p-md-4">
                         <div class="project-image-inner">
-                            <img class="img-fluid" src="img/project-patient-manager.png" alt="">
+                            <img class="img-fluid" src="img/project-simple-cms.png" alt="">
                         </div>
                     </div>
                 </div>
