Fix project links

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                                 </p>
                                 <p>
                                     <a class="btn btn-primary btn-sm mb-2 mb-sm-0"
-                                        href="https://bilalkhalid.com/projects/jobboard"
+                                        href="https://bilalkhalid.com/projects/forum"
                                         target="_blank">View Demo</a>
                                     <a class="btn btn-secondary btn-sm mb-2 mb-sm-0" 
-                                        href="https://github.com/bk987/CakePHP-JobBoard" 
+                                        href="https://github.com/bk987/Laravel-Forum" 
                                         target="_blank">Source Code</a>
                                 </p>
                             </div>
