--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="row">
                 <div class="col-12 col-lg-10 col-xl-8 mx-auto text-center">
                     <h1 class="text-black mx-auto mt-0 mb-5">Hi, I'm Bilal Khalid.</h1>
-                    <p class="text-dark mx-auto mt-0 mb-5">A Full Stack Developer, with more than eight years of professional experience, passionate about technology and motivated to constantly learn new things.</p>
+                    <p class="text-dark mx-auto mt-0 mb-5">A Full Stack Developer, with more than thirteen years of professional experience, passionate about technology and motivated to constantly learn new things.</p>
                     <a href="#projects" class="btn btn-primary btn-lg js-scroll-trigger mb-2 mb-sm-0">View Projects</a>
                     <a href="#contact" class="btn btn-secondary btn-lg js-scroll-trigger mb-2 mb-sm-0">Contact Me</a>
                 </div>
